--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.1.0"
+    "marked": "^5.1.0",
+    "mongoose": "^7.1.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
