--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dompurify": "^3.0.3",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
+    "jsdom": "^22.1.0",
     "jsonwebtoken": "^9.0.0",
     "marked": "^5.1.0",
+    "method-override": "^3.0.0",
     "mongoose": "^7.1.0",
     "slugify": "^1.6.6"
   },
